Bug 616075 - HTML5 offline event support for Android. r=mwu a=blocking-fennec