other-licenses/android/APKOpen.cpp
@@ -238,6 +238,7 @@ SHELL_WRAPPER0(onResume)
 SHELL_WRAPPER0(onLowMemory)
 SHELL_WRAPPER3(callObserver, jstring, jstring, jstring)
 SHELL_WRAPPER1(removeObserver, jstring)
+SHELL_WRAPPER1(onChangeNetworkLinkStatus, jstring)
 
 static void * xul_handle = NULL;
 static time_t apk_mtime = 0;
@@ -667,6 +668,7 @@ loadLibs(const char *apkName)
   GETFUNC(onLowMemory);
   GETFUNC(callObserver);
   GETFUNC(removeObserver);
+  GETFUNC(onChangeNetworkLinkStatus);
 #undef GETFUNC
   gettimeofday(&t1, 0);
   struct rusage usage2;
